# blivedm

./: .gitignore  README.md
api/: .env.example  README.md  pyproject.toml  rollback.sh  run.sh
api/blivedm_api/: __init__.py  bili_api.py  config.py  coordinator.py  db.py  event_projector.py  events.py  main.py  room_parser.py
api/blivedm_api/static/: app.js  index.html  styles.css
api/scripts/: dedupe_live_sessions.py
api/tests/: test_bili_api.py  test_coordinator.py  test_event_projector.py  test_events.py  test_room_parser.py
client/: .env.example  README.md  pyproject.toml  rollback.sh  run.sh
client/blivedm_client/: __init__.py  api_client.py  collector.py  config.py  main.py  monitor.py  task_client.py
client/tests/: test_monitor.py
deploy/: README.md  install-api.sh  install-client.sh  upload-to-oss.sh
