[project]
name = "blivedm-client"
version = "0.1.0"
description = "Collector client for Bilibili live WebSocket messages."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0,<4.0.0",
    "blivedm @ git+https://github.com/xfgryujk/blivedm.git@dev",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

